# parallel-rdp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  VP_PARALLEL_RDP_profile.json  conformance_utils.hpp  generate_profile_solution.sh  generate_standalone_codebase.sh  integration_example.cpp  integration_example_gl.cpp  logging.hpp  primitive_setup.hpp  rdp_bench.cpp  rdp_command_builder.cpp  rdp_command_builder.hpp  rdp_conformance.cpp  rdp_dump.cpp  rdp_dump.hpp  rdp_replayer.cpp  rdp_validate_dump.cpp  replayer_driver.cpp  replayer_driver.hpp  replayer_driver_angrylion.cpp  replayer_driver_parallel.cpp  setup_android_build_rdp_bench.sh  triangle_converter.cpp  triangle_converter.hpp  vi_conformance.cpp
.github/workflows/: build.yml
android-scripts/: run_android_app_rdp_bench.sh  run_android_app_rdp_conformance.sh  run_android_app_vi_conformance.sh  setup_android_build_rdp_conformance.sh  setup_android_build_vi_conformance.sh
parallel-rdp/: CMakeLists.txt  config.mk  rdp_common.hpp  rdp_data_structures.hpp  rdp_device.cpp  rdp_device.hpp  rdp_renderer.cpp  rdp_renderer.hpp  video_interface.cpp  video_interface.hpp
parallel-rdp/shaders/: binning.h  data_structures.h  depth_blend.comp  interpolation.h  load_derived_setup.h  memory_interfacing.h  shading.h  slangmosh.json  span_setup.comp  texture.h  tile_binning.comp  tile_binning_combined.comp  tmem_update.comp  ubershader.comp  update_upscaled_domain_post.comp  update_upscaled_domain_pre.comp  update_upscaled_domain_resolve.comp  vi_scale.frag  vi_status.h
vulkan/: device.cpp
vulkan-profile/: setup_profile_environment_baseline.sh  setup_profile_environment_optimal.sh
vulkan-profile/vulkan/: vulkan_profiles.cpp  vulkan_profiles.h  vulkan_profiles.hpp
