cmake_minimum_required(VERSION 3.5)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_C_STANDARD 99)

if (BUILD_ANDROID)
	set(CMAKE_TOOLCHAIN_FILE $ENV{ANDROID_HOME}/ndk-bundle/build/cmake/android.toolchain.cmake)
	set(ANDROID_PLATFORM android-26)
	set(ANDROID_ABI arm64-v8a)
endif()

project(rdp-replayer LANGUAGES CXX C)

if (CMAKE_COMPILER_IS_GNUCXX OR (${CMAKE_CXX_COMPILER_ID} MATCHES "Clang"))
    set(RDP_REPLAYER_CXX_FLAGS -Wall -Wextra -Wno-missing-field-initializers -Wno-empty-body -ffast-math -Wno-unused-parameter -pthread -fwrapv)
elseif (MSVC)
    set(RDP_REPLAYER_CXX_FLAGS /D_CRT_SECURE_NO_WARNINGS /wd4267 /wd4244 /wd4309 /wd4005 /MP /DNOMINMAX)
endif()

set(GRANITE_ISPC_TEXTURE_COMPRESSION OFF CACHE BOOL "" FORCE)
set(GRANITE_ASTC_ENCODER_COMPRESSION OFF CACHE BOOL "" FORCE)
option(RDP_SANITIZE_ADDRESS "Sanitize address" OFF)

if (RDP_SANITIZE_ADDRESS)
	set(RDP_REPLAYER_CXX_FLAGS ${RDP_REPLAYER_CXX_FLAGS} -fsanitize=address)
	set(RDP_REPLAYER_LINK_FLAGS "${RDP_REPLAYER_LINK_FLAGS} -fsanitize=address -latomic")
endif()

add_subdirectory(Granite EXCLUDE_FROM_ALL)

add_library(alp-core STATIC
        angrylion-rdp-plus/src/core/common.h
        angrylion-rdp-plus/src/core/msg.h
        angrylion-rdp-plus/src/core/n64video.c
        angrylion-rdp-plus/src/core/n64video.h
        angrylion-rdp-plus/src/core/parallel.cpp
        angrylion-rdp-plus/src/core/parallel.h
        angrylion-rdp-plus/src/core/screen.h
        angrylion-rdp-plus/src/core/vdac.h)
target_include_directories(alp-core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/angrylion-rdp-plus/src/core)
if (NOT WIN32)
    target_link_libraries(alp-core PUBLIC -pthread)
endif()

add_subdirectory(parallel-rdp)

add_library(rdp-utils STATIC
        replayer_driver.hpp replayer_driver.cpp
        replayer_driver_angrylion.cpp
        replayer_driver_parallel.cpp
        triangle_converter.cpp triangle_converter.hpp
        rdp_command_builder.cpp rdp_command_builder.hpp
        rdp_dump.cpp rdp_dump.hpp)
target_include_directories(rdp-utils PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_options(rdp-utils PRIVATE ${RDP_REPLAYER_CXX_FLAGS})
target_link_libraries(rdp-utils PUBLIC alp-core parallel-rdp PRIVATE granite-vulkan granite-util)

add_granite_application(rdp-replayer rdp_replayer.cpp)
target_link_libraries(rdp-replayer PRIVATE rdp-utils)
target_compile_options(rdp-replayer PRIVATE ${RDP_REPLAYER_CXX_FLAGS})
set_target_properties(rdp-replayer PROPERTIES LINK_FLAGS "${RDP_REPLAYER_LINK_FLAGS}")

add_granite_offline_tool(rdp-conformance rdp_conformance.cpp conformance_utils.hpp)
target_link_libraries(rdp-conformance PRIVATE rdp-utils)
target_compile_options(rdp-conformance PRIVATE ${RDP_REPLAYER_CXX_FLAGS})
set_target_properties(rdp-conformance PROPERTIES LINK_FLAGS "${RDP_REPLAYER_LINK_FLAGS}")

add_granite_offline_tool(rdp-validate-dump rdp_validate_dump.cpp conformance_utils.hpp)
target_link_libraries(rdp-validate-dump PRIVATE rdp-utils)
target_compile_options(rdp-validate-dump PRIVATE ${RDP_REPLAYER_CXX_FLAGS})
set_target_properties(rdp-validate-dump PROPERTIES LINK_FLAGS "${RDP_REPLAYER_LINK_FLAGS}")

add_granite_offline_tool(vi-conformance vi_conformance.cpp conformance_utils.hpp)
target_link_libraries(vi-conformance PRIVATE rdp-utils)
target_compile_options(vi-conformance PRIVATE ${RDP_REPLAYER_CXX_FLAGS})
set_target_properties(vi-conformance PROPERTIES LINK_FLAGS "${RDP_REPLAYER_LINK_FLAGS}")

add_granite_offline_tool(rdp-bench rdp_bench.cpp conformance_utils.hpp)
target_link_libraries(rdp-bench PRIVATE rdp-utils)
target_compile_options(rdp-bench PRIVATE ${RDP_REPLAYER_CXX_FLAGS})
set_target_properties(rdp-bench PROPERTIES LINK_FLAGS "${RDP_REPLAYER_LINK_FLAGS}")

if (NOT ANDROID)
    # Native Vulkan integration example.
    add_granite_offline_tool(parallel-rdp-integration-example integration_example.cpp)
    target_link_libraries(parallel-rdp-integration-example PRIVATE parallel-rdp granite-vulkan glfw)

    # Integration example with OpenGL interop (based on Granite integration sample, extrapolate to D3D11/12 interop).
    add_granite_offline_tool(parallel-rdp-integration-example-gl integration_example_gl.cpp
        Granite/tests/glad/src/glad.c)
    target_link_libraries(parallel-rdp-integration-example-gl PRIVATE parallel-rdp granite-vulkan glfw)
    target_include_directories(parallel-rdp-integration-example-gl PRIVATE Granite/tests/glad/include)
endif()

enable_testing()
function(add_rdp_test NAME)
    add_test(NAME rdp-test-${NAME}
            COMMAND $<TARGET_FILE:rdp-conformance> --suite ${NAME} --verbose --range 0 1000)
endfunction()
function(add_rdp_test_reduced NAME)
    add_test(NAME rdp-test-${NAME}
            COMMAND $<TARGET_FILE:rdp-conformance> --suite ${NAME} --verbose --range 0 100)
endfunction()
function(add_vi_test NAME)
    add_test(NAME vi-test-${NAME}
            COMMAND $<TARGET_FILE:vi-conformance> --suite ${NAME} --verbose --range 0 1000)
endfunction()

add_rdp_test(fill-8)
add_rdp_test(fill-16)
add_rdp_test(fill-16-interlace)
add_rdp_test(fill-16-ia)
add_rdp_test(fill-32)
add_rdp_test(fill-ym-out-of-range)

add_rdp_test(copy-4bpp-fb16-tlut)
add_rdp_test(copy-8bpp-fb16-tlut)
add_rdp_test(copy-16bpp-fb16-tlut)
add_rdp_test(copy-32bpp-fb8)
add_rdp_test(copy-32bpp-fb16)
add_rdp_test(copy-4bpp-fb8)
add_rdp_test(copy-4bpp-fb16)
add_rdp_test(copy-4bpp-fb4)
add_rdp_test(copy-8bpp-fb4)
add_rdp_test(copy-16bpp-fb4)
add_rdp_test(copy-32bpp-fb4)
add_rdp_test(copy-8bpp-fb8)
add_rdp_test(copy-8bpp-fb16)
add_rdp_test(copy-16bpp-fb8)
add_rdp_test(copy-16bpp-fb16)
add_rdp_test(copy-16bpp-fb16-alpha-test)

add_rdp_test(fill-rect)
add_rdp_test(tex-rect)

add_rdp_test(rasterization-noaa)
add_rdp_test(rasterization-aa)
add_rdp_test(rasterization-interlace-aa)
add_rdp_test_reduced(rasterization-many-primitives)
add_rdp_test_reduced(rasterization-many-primitives-alias)
add_rdp_test(combiner-1cycle)
add_rdp_test(combiner-2cycle)
add_rdp_test(combiner-2cycle-alpha-test-color)
add_rdp_test(combiner-2cycle-alpha-test-texture)
add_rdp_test(blender-fog-color-1cycle-i4)
add_rdp_test(blender-fog-color-1cycle-i8)
add_rdp_test(blender-fog-color-1cycle-rgba5551)
add_rdp_test(blender-fog-color-1cycle-ia88)
add_rdp_test(blender-fog-color-1cycle-rgba8888)
add_rdp_test(blender-fog-color-2cycle-i4)
add_rdp_test(blender-fog-color-2cycle-i8)
add_rdp_test(blender-fog-color-2cycle-rgba5551)
add_rdp_test(blender-fog-color-2cycle-ia88)
add_rdp_test(blender-fog-color-2cycle-rgba8888)
add_rdp_test(coverage-clamp)
add_rdp_test(coverage-wrap)
add_rdp_test(coverage-zap)
add_rdp_test(coverage-save)
add_rdp_test(coverage-clamp-image-read)
add_rdp_test(coverage-wrap-image-read)
add_rdp_test(coverage-zap-image-read)
add_rdp_test(coverage-save-image-read)
add_rdp_test(color-on-coverage)
add_rdp_test(depth-compare-opaque)
add_rdp_test(depth-compare-interpenetrating)
add_rdp_test(depth-compare-transparent)
add_rdp_test(depth-compare-decal)
add_rdp_test(depth-compare-opaque-prim-depth)
add_rdp_test(depth-compare-interpenetrating-prim-depth)
add_rdp_test(depth-compare-transparent-prim-depth)
add_rdp_test(depth-compare-decal-prim-depth)
add_rdp_test(interpolation-color)
add_rdp_test(interpolation-depth)
add_rdp_test(interpolation-color-depth)
add_rdp_test(interpolation-color-depth-cvg-times-alpha)
add_rdp_test(interpolation-color-depth-aa-cvg-times-alpha)
add_rdp_test(interpolation-color-depth-aa-cvg-times-alpha-alpha-cvg-select)
add_rdp_test(interpolation-color-depth-aa-alpha-cvg-select)

add_rdp_test(interpolation-color-depth-alpha-test-dither-off)
add_rdp_test(interpolation-color-depth-alpha-test-dither-test)
add_rdp_test(interpolation-color-depth-alpha-test-dither-all)
add_rdp_test(interpolation-color-depth-alpha-test-dither-magic-pattern)
add_rdp_test(interpolation-color-depth-alpha-test-dither-magic-flip)
add_rdp_test(interpolation-color-depth-alpha-test-dither-magic-noise)
add_rdp_test(interpolation-color-depth-alpha-test-dither-bayer-pattern)
add_rdp_test(interpolation-color-depth-alpha-test-dither-bayer-flip)
add_rdp_test(interpolation-color-depth-alpha-test-dither-bayer-noise)
add_rdp_test(interpolation-color-depth-alpha-test-dither-off-pattern)
add_rdp_test(interpolation-color-depth-alpha-test-dither-off-flip)
add_rdp_test(interpolation-color-depth-alpha-test-dither-off-noise)
add_rdp_test(interpolation-color-depth-alpha-test-dither-noise-off)
add_rdp_test(interpolation-color-depth-alpha-test-dither-noise-pattern)
add_rdp_test(interpolation-color-depth-alpha-test-dither-noise-flip)
add_rdp_test(interpolation-color-depth-alpha-test-dither-noise-noise)

add_rdp_test(interpolation-color-texture-pipelined-texel1)
add_rdp_test(interpolation-color-texture-pipelined-texel1-perspective)
add_rdp_test(interpolation-color-texture-2cycle-convert-bilerp)
add_rdp_test(interpolation-color-texture-2cycle-convert-factors)
add_rdp_test(interpolation-color-texture-2cycle-implicit-convert-factors)
add_rdp_test(interpolation-color-texture-2cycle-implicit-convert-factors-bilerp)
add_rdp_test(interpolation-color-texture-rgba4)
add_rdp_test(interpolation-color-texture-rgba8)
add_rdp_test(interpolation-color-texture-rgba16)
add_rdp_test(interpolation-color-texture-yuv16)
add_rdp_test(interpolation-color-texture-yuv16-nearest)
add_rdp_test(interpolation-color-texture-rgba16-mid-texel)
add_rdp_test(interpolation-color-texture-rgba32)
add_rdp_test(interpolation-color-texture-rgba4-nearest)
add_rdp_test(interpolation-color-texture-rgba8-nearest)
add_rdp_test(interpolation-color-texture-rgba16-nearest)
add_rdp_test(interpolation-color-texture-rgba32-nearest)
add_rdp_test(interpolation-color-texture-ci4)
add_rdp_test(interpolation-color-texture-ci8)
add_rdp_test(interpolation-color-texture-ci16)
add_rdp_test(interpolation-color-texture-ci32)
add_rdp_test(interpolation-color-texture-ia4)
add_rdp_test(interpolation-color-texture-ia8)
add_rdp_test(interpolation-color-texture-ia16)
add_rdp_test(interpolation-color-texture-ia32)
add_rdp_test(interpolation-color-texture-ci4-tlut)
add_rdp_test(interpolation-color-texture-ci8-tlut)
add_rdp_test(interpolation-color-texture-ci16-tlut)
add_rdp_test(interpolation-color-texture-ci32-tlut)
add_rdp_test(interpolation-color-texture-ia4-tlut)
add_rdp_test(interpolation-color-texture-ia8-tlut)
add_rdp_test(interpolation-color-texture-ia16-tlut)
add_rdp_test(interpolation-color-texture-ia32-tlut)
add_rdp_test(interpolation-color-texture-i4-tlut)
add_rdp_test(interpolation-color-texture-i8-tlut)
add_rdp_test(interpolation-color-texture-i16-tlut)
add_rdp_test(interpolation-color-texture-i32-tlut)
add_rdp_test(interpolation-color-texture-rgba4-tlut)
add_rdp_test(interpolation-color-texture-rgba8-tlut)
add_rdp_test(interpolation-color-texture-rgba16-tlut)
add_rdp_test(interpolation-color-texture-rgba32-tlut)
add_rdp_test(interpolation-color-texture-ci4-tlut-ia16)
add_rdp_test(interpolation-color-texture-ci8-tlut-ia16)
add_rdp_test(interpolation-color-texture-ci16-tlut-ia16)
add_rdp_test(interpolation-color-texture-ci32-tlut-ia16)
add_rdp_test(interpolation-color-texture-2cycle-lod-frac)
add_rdp_test(interpolation-color-texture-perspective)
add_rdp_test(interpolation-color-texture-perspective-2cycle-lod-frac)
add_rdp_test(interpolation-color-texture-perspective-2cycle-lod-frac-sharpen)
add_rdp_test(interpolation-color-texture-perspective-2cycle-lod-frac-detail)
add_rdp_test(interpolation-color-texture-perspective-2cycle-lod-frac-sharpen-detail)
add_rdp_test(texture-load-tile-16-yuv)
add_rdp_test(texture-load-block-16-yuv)
add_rdp_test(texture-load-tile-4)
add_rdp_test(texture-load-tile-8)
add_rdp_test(texture-load-tile-16)
add_rdp_test(texture-load-tile-32)
add_rdp_test(texture-load-block-8)
add_rdp_test(texture-load-block-16)
add_rdp_test(texture-load-block-32)
add_rdp_test(texture-load-tlut-4)
add_rdp_test(texture-load-tlut-8)
add_rdp_test(texture-load-tlut-16)

# Esoteric texture sampling mode tests.
add_rdp_test(texture-convert-1cycle-YUVplain)
add_rdp_test(texture-convert-1cycle-YUV-convplain)
add_rdp_test(texture-convert-1cycle-RGBAplain)
add_rdp_test(texture-convert-1cycle-RGBA-convplain)
add_rdp_test(texture-convert-2cycle-YUVplain)
add_rdp_test(texture-convert-2cycle-YUV-convplain)
add_rdp_test(texture-convert-2cycle-RGBAplain)
add_rdp_test(texture-convert-2cycle-RGBA-convplain)
add_rdp_test(texture-convert-1cycle-YUVquad)
add_rdp_test(texture-convert-1cycle-YUV-convquad)
add_rdp_test(texture-convert-1cycle-RGBAquad)
add_rdp_test(texture-convert-1cycle-RGBA-convquad)
add_rdp_test(texture-convert-2cycle-YUVquad)
add_rdp_test(texture-convert-2cycle-YUV-convquad)
add_rdp_test(texture-convert-2cycle-RGBAquad)
add_rdp_test(texture-convert-2cycle-RGBA-convquad)
add_rdp_test(texture-convert-1cycle-YUVmid)
add_rdp_test(texture-convert-1cycle-YUV-convmid)
add_rdp_test(texture-convert-1cycle-RGBAmid)
add_rdp_test(texture-convert-1cycle-RGBA-convmid)
add_rdp_test(texture-convert-2cycle-YUVmid)
add_rdp_test(texture-convert-2cycle-YUV-convmid)
add_rdp_test(texture-convert-2cycle-RGBAmid)
add_rdp_test(texture-convert-2cycle-RGBA-convmid)
add_rdp_test(texture-convert-1cycle-YUVquad-mid)
add_rdp_test(texture-convert-1cycle-YUV-convquad-mid)
add_rdp_test(texture-convert-1cycle-RGBAquad-mid)
add_rdp_test(texture-convert-1cycle-RGBA-convquad-mid)
add_rdp_test(texture-convert-2cycle-YUVquad-mid)
add_rdp_test(texture-convert-2cycle-YUV-convquad-mid)
add_rdp_test(texture-convert-2cycle-RGBAquad-mid)
add_rdp_test(texture-convert-2cycle-RGBA-convquad-mid)
add_rdp_test(texture-convert-1cycle-YUVbilerp)
add_rdp_test(texture-convert-1cycle-YUV-convbilerp)
add_rdp_test(texture-convert-1cycle-RGBAbilerp)
add_rdp_test(texture-convert-1cycle-RGBA-convbilerp)
add_rdp_test(texture-convert-2cycle-YUVbilerp)
add_rdp_test(texture-convert-2cycle-YUV-convbilerp)
add_rdp_test(texture-convert-2cycle-RGBAbilerp)
add_rdp_test(texture-convert-2cycle-RGBA-convbilerp)
add_rdp_test(texture-convert-1cycle-YUVquad-bilerp)
add_rdp_test(texture-convert-1cycle-YUV-convquad-bilerp)
add_rdp_test(texture-convert-1cycle-RGBAquad-bilerp)
add_rdp_test(texture-convert-1cycle-RGBA-convquad-bilerp)
add_rdp_test(texture-convert-2cycle-YUVquad-bilerp)
add_rdp_test(texture-convert-2cycle-YUV-convquad-bilerp)
add_rdp_test(texture-convert-2cycle-RGBAquad-bilerp)
add_rdp_test(texture-convert-2cycle-RGBA-convquad-bilerp)
add_rdp_test(texture-convert-1cycle-YUVbilerp-mid)
add_rdp_test(texture-convert-1cycle-YUV-convbilerp-mid)
add_rdp_test(texture-convert-1cycle-RGBAbilerp-mid)
add_rdp_test(texture-convert-1cycle-RGBA-convbilerp-mid)
add_rdp_test(texture-convert-2cycle-YUVbilerp-mid)
add_rdp_test(texture-convert-2cycle-YUV-convbilerp-mid)
add_rdp_test(texture-convert-2cycle-RGBAbilerp-mid)
add_rdp_test(texture-convert-2cycle-RGBA-convbilerp-mid)
add_rdp_test(texture-convert-1cycle-YUVquad-mid-bilerp)
add_rdp_test(texture-convert-1cycle-YUV-convquad-mid-bilerp)
add_rdp_test(texture-convert-1cycle-RGBAquad-mid-bilerp)
add_rdp_test(texture-convert-1cycle-RGBA-convquad-mid-bilerp)
add_rdp_test(texture-convert-2cycle-YUVquad-mid-bilerp)
add_rdp_test(texture-convert-2cycle-YUV-convquad-mid-bilerp)
add_rdp_test(texture-convert-2cycle-RGBAquad-mid-bilerp)
add_rdp_test(texture-convert-2cycle-RGBA-convquad-mid-bilerp)

add_vi_test(aa-none-rgba5551)
add_vi_test(aa-none-rgba8888)
add_vi_test(aa-none-blank)
add_vi_test(aa-none-reserved)
add_vi_test(aa-extra-always)
add_vi_test(aa-extra)
add_vi_test(aa-scale)
add_vi_test(aa-none)
add_vi_test(aa-extra-dither-filter)
add_vi_test(aa-extra-divot)
add_vi_test(aa-extra-dither-filter-divot)
add_vi_test(aa-extra-gamma)
add_vi_test(aa-extra-gamma-dither)
add_vi_test(aa-extra-nogamma-dither)
add_vi_test(aa-none-randomize-xy-scale-bias)
add_vi_test(aa-scale-randomize-xy-scale-bias)
add_vi_test(aa-extra-randomize-xy-scale-bias)
add_vi_test(aa-none-randomize-hv-start-end)
add_vi_test(aa-none-randomize-hv-start-end-pal)
add_vi_test(aa-none-serrate)
add_vi_test(per-scanline-xh)
add_vi_test(per-scanline-xh-upscale)
add_vi_test(per-scanline-xh-crop)
add_vi_test(per-scanline-xh-upscale-crop)

